--- a/clean_and_encode.ipynb
+++ b/clean_and_encode.ipynb
@@ -1388,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1440,7 @@
      "output_type": "stream",
      "text": [
       "95.625\n",
-      "45.0\n",
+      "61.875\n",
       "157.5\n"
      ]
     }
@@ -1453,7 +1453,7 @@
     "\n",
     "# examples\n",
     "print(find_angle(93, selected_angles))\n",
-    "print(find_angle(45, selected_angles))\n",
+    "print(find_angle(61, selected_angles))\n",
     "print(find_angle(160, selected_angles))"
    ]
   },
@@ -2077,7 +2077,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 ('venv': venv)",
+   "display_name": "Python 3.11.0 ('venv')",
    "language": "python",
    "name": "python3"
   },
@@ -2096,7 +2096,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8b98e89182393848b269764751de12a768602775d422d11e2018ee05ba3748f8"
+    "hash": "d046ae9f01dcc59dc4ca4b87ba544df5a0e0d9f87eb38ed7f68b5229b275824f"
    }
   }
  },
