--- a/decode.ipynb
+++ b/decode.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
     "                case 0:\n",
     "                    return nan_value\n",
     "                case _:\n",
-    "                    return (encoded-1)*ANGLE_INTERVAL + 61.00\n",
+    "                    return (encoded-1)*ANGLE_INTERVAL + 61.875\n",
     "        case 'Length':\n",
     "            return encoded/10.0\n",
     "        case 'Width':\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "      <td>96.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>129.375</td>\n",
-       "      <td>100.375</td>\n",
+       "      <td>101.250</td>\n",
        "      <td>3.3</td>\n",
        "      <td>4.1</td>\n",
        "      <td>1.0</td>\n",
@@ -202,7 +202,7 @@
        "      <td>34.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>123.750</td>\n",
-       "      <td>106.000</td>\n",
+       "      <td>106.875</td>\n",
        "      <td>2.6</td>\n",
        "      <td>3.6</td>\n",
        "      <td>1.0</td>\n",
@@ -214,7 +214,7 @@
        "      <td>28.0</td>\n",
        "      <td>3.0</td>\n",
        "      <td>118.125</td>\n",
-       "      <td>94.750</td>\n",
+       "      <td>95.625</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.3</td>\n",
        "      <td>1.1</td>\n",
@@ -226,7 +226,7 @@
        "      <td>NaN</td>\n",
        "      <td>7.0</td>\n",
        "      <td>112.500</td>\n",
-       "      <td>94.750</td>\n",
+       "      <td>95.625</td>\n",
        "      <td>1.8</td>\n",
        "      <td>2.3</td>\n",
        "      <td>0.7</td>\n",
@@ -238,7 +238,7 @@
        "      <td>27.0</td>\n",
        "      <td>8.0</td>\n",
        "      <td>140.625</td>\n",
-       "      <td>106.000</td>\n",
+       "      <td>106.875</td>\n",
        "      <td>2.7</td>\n",
        "      <td>3.6</td>\n",
        "      <td>0.8</td>\n",
@@ -262,7 +262,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>123.750</td>\n",
-       "      <td>100.375</td>\n",
+       "      <td>101.250</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.8</td>\n",
        "      <td>0.7</td>\n",
@@ -274,7 +274,7 @@
        "      <td>23.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>123.750</td>\n",
-       "      <td>111.625</td>\n",
+       "      <td>112.500</td>\n",
        "      <td>3.0</td>\n",
        "      <td>3.1</td>\n",
        "      <td>1.3</td>\n",
@@ -286,7 +286,7 @@
        "      <td>NaN</td>\n",
        "      <td>0.0</td>\n",
        "      <td>140.625</td>\n",
-       "      <td>122.875</td>\n",
+       "      <td>123.750</td>\n",
        "      <td>1.4</td>\n",
        "      <td>2.7</td>\n",
        "      <td>0.3</td>\n",
@@ -298,7 +298,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>123.750</td>\n",
-       "      <td>94.750</td>\n",
+       "      <td>95.625</td>\n",
        "      <td>2.5</td>\n",
        "      <td>2.1</td>\n",
        "      <td>0.8</td>\n",
@@ -310,7 +310,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>129.375</td>\n",
-       "      <td>100.375</td>\n",
+       "      <td>101.250</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.8</td>\n",
        "      <td>0.5</td>\n",
@@ -335,22 +335,22 @@
        "831         0.0          1.0      NaN          NaN      129.375   \n",
        "\n",
        "     DilationAngle  Length  Width  Height  \n",
-       "0          100.375     3.3    4.1     1.0  \n",
-       "1          106.000     2.6    3.6     1.0  \n",
-       "2           94.750     3.0    3.3     1.1  \n",
-       "3           94.750     1.8    2.3     0.7  \n",
-       "4          106.000     2.7    3.6     0.8  \n",
+       "0          101.250     3.3    4.1     1.0  \n",
+       "1          106.875     2.6    3.6     1.0  \n",
+       "2           95.625     3.0    3.3     1.1  \n",
+       "3           95.625     1.8    2.3     0.7  \n",
+       "4          106.875     2.7    3.6     0.8  \n",
        "..             ...     ...    ...     ...  \n",
-       "827        100.375     2.0    2.8     0.7  \n",
-       "828        111.625     3.0    3.1     1.3  \n",
-       "829        122.875     1.4    2.7     0.3  \n",
-       "830         94.750     2.5    2.1     0.8  \n",
-       "831        100.375     2.0    2.8     0.5  \n",
+       "827        101.250     2.0    2.8     0.7  \n",
+       "828        112.500     3.0    3.1     1.3  \n",
+       "829        123.750     1.4    2.7     0.3  \n",
+       "830         95.625     2.5    2.1     0.8  \n",
+       "831        101.250     2.0    2.8     0.5  \n",
        "\n",
        "[832 rows x 9 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 ('venv': venv)",
+   "display_name": "Python 3.11.0 ('venv')",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +381,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8b98e89182393848b269764751de12a768602775d422d11e2018ee05ba3748f8"
+    "hash": "d046ae9f01dcc59dc4ca4b87ba544df5a0e0d9f87eb38ed7f68b5229b275824f"
    }
   }
  },
